Update vim plugins

--- a/.vim/bundle/scss-syntax.vim/example.scss
+++ b/.vim/bundle/scss-syntax.vim/example.scss
@@ -115,6 +115,7 @@ p {
   width: round(1.5)/2;        // Uses a function, does division
   height: (500px/2);          // Uses parentheses, does division
   margin-left: 5px + 8px/2px; // Uses +, does division
+  font: (italic bold 10px/8px); // In a list, parentheses don't count
 }
 
 p {
